--- a/5winsights.html
+++ b/5winsights.html
@@ -149,7 +149,7 @@
                                     </div>
 
                                     <div>
-                                        <p>The 5W Insights booth and marketing collateral received a visual and strategic update for the 2024 Bridge Conference to align with a recent brand refresh.</p>
+                                        <p>The 5W Insights booth and marketing collateral received a visual and strategic messagin update for the 2024 Bridge Conference.</p>
                                     </div>
 
                                 </div>
@@ -174,7 +174,7 @@
                                         <div class="uk-slider-container">
                                             <div class="uk-slider-items" uk-lightbox="animation: fade;slidenav: false; nav: dotnav">
 
-                                                <div id="bridge-slide-1" class="uk-width-5-6 uk-width-auto@s uk-margin-right">
+                                                <div id="backdrop-1" class="uk-width-5-6 uk-width-auto@s uk-margin-right">
                                                     <div class="">
                                                         <a href="img/5winsights/5W_10x10-BOOTH_2024.webp" data-caption="New">
                                                             <img src="img/5winsights/5W_10x10-BOOTH_2024.webp" class="uk-box-shadow-small uk-height-max-large"  />
@@ -183,7 +183,7 @@
                                                     <div class="in fw-500">New</div>
                                                 </div>
 
-                                                <div id="bridge-slide-1" class="uk-width-5-6 uk-width-auto@s uk-margin-right">
+                                                <div id="backdrop-2" class="uk-width-5-6 uk-width-auto@s uk-margin-right">
                                                     <div class="">
                                                         <a href="img/5winsights/5W_10x10-BOOTH_2023.webp" data-caption="Previous">
                                                             <img src="img/5winsights/5W_10x10-BOOTH_2023.webp" class="uk-box-shadow-small uk-height-max-large"   />
@@ -207,7 +207,7 @@
                             </div>
 
                             <div class="uk-width-1-4@s uk-flex uk-flex-middle uk-flex-first@s">
-                                <p class="uk-margin-remove-bottom uk-width-4-5@s uk-margin-auto">5W's new, bold colors and visuals core to the new branding were used in the new backdrop treatment and the messaging was simplified to a single message.</p>
+                                <p class="uk-margin-remove-bottom uk-width-4-5@s uk-margin-auto">5W's bold new colors and visuals were applied in this new backdrop treatment while the core company message was simplified to increase engagement.</p>
                             </div>
                         </div>
                     </div>
