--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                     </div>
 
                                     <div uk-scrollspy-class="uk-animation-slide-bottom-small">
-                                        <p class="in fs-16 fw-500">Updating designs for large-scale booth backdrops, brochures and branded swag to align with 5W's new identity</p>
+                                        <p class="in fs-16 fw-500">Updating 5W Insights' conference presence with refreshed booth and marketing collateral in alignment with a recent brand update.</p>
                                     </div>
 
                                     <div uk-scrollspy-class="uk-animation-slide-bottom-small">
