--- a/5winsights.html
+++ b/5winsights.html
@@ -149,7 +149,7 @@
                                     </div>
 
                                     <div>
-                                        <p>The 5W Insights booth and marketing collateral received a visual and strategic messagin update for the 2024 Bridge Conference.</p>
+                                        <p>The 5W Insights booth and marketing collateral received a visual and strategic messaging update for the 2024 Bridge Conference.</p>
                                     </div>
 
                                 </div>
