--- a/5winsights.html
+++ b/5winsights.html
@@ -213,21 +213,21 @@
                     </div>
 
                     <div class="uk-grid" uk-grid>
-                        <div class="uk-width-1-3">
+                        <div class="uk-width-1-2@s uk-width-1-3@m">
                             <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="booth">
                                 <div>
                                     <img src="img/5winsights/5W_FloorSign_2024.webp" class="uk-height-max-large" />
                                 </div>
-                                <div class="in fw-500">Floor sign</div>
+                                <p class="">5W's tall floor sign was repurposed from providing additional information in the booth space to becoming a replacement for the backdrop for booth spaces without room for the larger backdrop.</p>
                             </div>
                         </div>
 
-                        <div class="uk-width-2-3">
+                        <div class="uk-width-1-2@s uk-width-2-3@m">
                             <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="podium">
                                 <div>
                                     <img src="img/5winsights/5W_podium_2024.webp" />
                                 </div>
-                                <div class="in fw-500">Podium wrap</div>
+                                <p>The podium wrap was given a bolder presence and visual interest with a new background color and new visuals.</p>
                             </div>
                         </div>
                     </div>
@@ -242,7 +242,7 @@
                         <hr />
                     </div>
 
-                    <div class="uk-background-default uk-padding-small uk-border-rounded-large">
+                    <div class="uk-background-default uk-padding-small uk-border-rounded-large uk-margin-bottom">
 
                         <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite:true">
                             <div class="uk-slider-items">
@@ -282,6 +282,15 @@
 
                         <p class="uk-margin-remove-bottom">Slides for a LinkedIn carousel post.</p>
 
+                    </div>
+
+                    <div class="uk-width-1-2@s">
+                        <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="li-post">
+                            <div>
+                                <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" />
+                            </div>
+                            <p class="uk-margin-remove-bottom">Supporting graphic for a LinkedIn Post to promote 5W's CEO as a Session Speaker.</p>
+                        </div>
                     </div>
                 </div>
             </div>
