--- a/5winsights.html
+++ b/5winsights.html
@@ -185,11 +185,11 @@
 
                                                 <div id="backdrop-2" class="uk-width-5-6 uk-width-auto@s uk-margin-right">
                                                     <div class="">
-                                                        <a href="img/5winsights/5W_10x10-BOOTH_2023.webp" data-caption="Previous">
+                                                        <a href="img/5winsights/5W_10x10-BOOTH_2023.webp" data-caption="Old">
                                                             <img src="img/5winsights/5W_10x10-BOOTH_2023.webp" class="uk-box-shadow-small uk-height-max-large"   />
                                                         </a>
                                                     </div>
-                                                    <div class="in fw-500">Previous</div>
+                                                    <div class="in fw-500">Old</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -214,9 +214,16 @@
 
                     <div class="uk-grid" uk-grid>
                         <div class="uk-width-1-2@s uk-width-1-3@m">
-                            <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="booth">
-                                <div>
+                            <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="booth" uk-grid>
+                                <div class="uk-width-1-2">
                                     <img src="img/5winsights/5W_FloorSign_2024.webp" class="uk-height-max-large" />
+                                    <div class="in fw-500">New</div>
+
+                                </div>
+                                <div class="uk-width-1-2">
+                                    <img src="img/5winsights/5W_FloorSign_2023.webp" class="uk-height-max-large border" />
+                                    <div class="in fw-500">Old</div>
+
                                 </div>
                                 <p class="">5W's tall floor sign was repurposed from providing additional information in the booth space to becoming a replacement for the backdrop for booth spaces without room for the larger backdrop.</p>
                             </div>
