--- a/5winsights.html
+++ b/5winsights.html
@@ -180,7 +180,7 @@
                                                             <img src="img/5winsights/5W_10x10-BOOTH_2024.webp" class="uk-box-shadow-small uk-height-max-large"  />
                                                         </a>
                                                     </div>
-                                                    <div class="in fw-500">New</div>
+                                                    <p class="fs-12 fw-500 uk-margin-remove">New</p>
                                                 </div>
 
                                                 <div id="backdrop-2" class="uk-width-5-6 uk-width-auto@s uk-margin-right">
@@ -189,7 +189,7 @@
                                                             <img src="img/5winsights/5W_10x10-BOOTH_2023.webp" class="uk-box-shadow-small uk-height-max-large"   />
                                                         </a>
                                                     </div>
-                                                    <div class="in fw-500">Old</div>
+                                                    <p class="fs-12 fw-500 uk-margin-remove">Old</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -217,12 +217,12 @@
                             <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="booth" uk-grid>
                                 <div class="uk-width-1-2">
                                     <img src="img/5winsights/5W_FloorSign_2024.webp" class="uk-height-max-large" />
-                                    <div class="in fw-500">New</div>
+                                    <p class="fs-12 fw-500 uk-margin-remove">New</p>
 
                                 </div>
                                 <div class="uk-width-1-2">
                                     <img src="img/5winsights/5W_FloorSign_2023.webp" class="uk-height-max-large border" />
-                                    <div class="in fw-500">Old</div>
+                                    <p class="fs-12 fw-500 uk-margin-remove">Old</p>
 
                                 </div>
                                 <p class="">5W's tall floor sign was repurposed from providing additional information in the booth space to becoming a replacement for the backdrop for booth spaces without room for the larger backdrop.</p>
