--- a/5winsights.html
+++ b/5winsights.html
@@ -149,7 +149,7 @@
                                     </div>
 
                                     <div>
-                                        <p>The 5W Insights booth and marketing collateral received a visual and strategic messaging update for the 2024 Bridge Conference.</p>
+                                        <p>The 5W Insights tradeshow and marketing collateral received a visual and strategic messaging update for the 2024 Bridge Conference.</p>
                                     </div>
 
                                 </div>
@@ -162,15 +162,41 @@
                         </div>
                     </div>
 
-                    <div class="uk-background-default uk-padding-small uk-border-rounded-large uk-margin">
+                    <div class="uk-background-muted uk-border-rounded-large uk-padding uk-margin">
 
-                        <div class="uk-grid-large" uk-grid>
+                        <div class="uk-grid-small" uk-grid>
+                            <div class="uk-width-1-4@m uk-flex uk-flex-middle">
+                                <div class="">
+                                    <h4 class="fs-20 fw-600 uk-margin-small-bottom">Tradeshow backdrop
+                                    </h4>
+                                    <p class="fs-14 uk-margin-small-top">5W's bold new colors and visuals were applied in this new backdrop treatment while the core company message was simplified to increase engagement.</p>
 
-                            <div class="uk-width-expand">
-                                <div uk-slider="finite:true">
+                                    <div class="uk-flex-center uk-flex">
+                                        <div class="uk-display-inline-block uk-background-muted uk-border-pill uk-flex-center uk-flex-middle uk-grid-small uk-box-shadow-inset">
+                                            <ul class="uk-subnav  uk-padding-xsmall uk-subnav-pill uk-margin-remove uk-margin" uk-switcher="connect: #backdrop">
+                                                <li class="uk-active uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-small uk-padding-remove-vertical">New</a></li>
+                                                <li class="uk-margin-xsmall-left uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-remove-vertical uk-padding-small">Old</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
+                            <div class="uk-width-expand uk-flex-first uk-flex-last@s">
+                                <div id="backdrop" class="uk-switcher uk-flex uk-flex-first uk-text-center">
+
+                                    <div id="backdrop-1" class="">
+                                        <img src="img/5winsights/5W_10x10-BOOTH_2024.webp" class="uk-box-shadow-small uk-border-rounded"  />
+                                    </div>
+
+                                    <div id="backdrop-2" class="">
+                                        <img src="img/5winsights/5W_10x10-BOOTH_2023.webp" class="uk-box-shadow-small uk-border-rounded" />
+
+                                    </div>
+                                </div>
+
+                                <div class="uk-hidden" uk-slider="finite:true">
                                     <div class="uk-container uk-container-large uk-position-relative" >
-
                                         <div class="uk-slider-container">
                                             <div class="uk-slider-items" uk-lightbox="animation: fade;slidenav: false; nav: dotnav">
 
@@ -206,39 +232,58 @@
 
                             </div>
 
-                            <div class="uk-width-1-4@s uk-flex uk-flex-middle uk-flex-first@s">
-                                <p class="uk-margin-remove-bottom uk-width-4-5@s uk-margin-auto">5W's bold new colors and visuals were applied in this new backdrop treatment while the core company message was simplified to increase engagement.</p>
-                            </div>
+
                         </div>
                     </div>
 
                     <div class="uk-grid" uk-grid>
                         <div class="uk-width-1-2@s uk-width-1-3@m">
-                            <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="booth" uk-grid>
-                                <div class="uk-width-1-2">
-                                    <img src="img/5winsights/5W_FloorSign_2024.webp" class="uk-height-max-large" />
-                                    <p class="fs-12 fw-500 uk-margin-remove">New</p>
+                            <div class="uk-background-muted uk-padding-small uk-border-rounded-large"  >
 
-                                </div>
-                                <div class="uk-width-1-2">
-                                    <img src="img/5winsights/5W_FloorSign_2023.webp" class="uk-height-max-large border" />
-                                    <p class="fs-12 fw-500 uk-margin-remove">Old</p>
+                                <div class="uk-grid-small" uk-grid>
+                                    <div class="uk-width-expand@m uk-flex uk-flex-middle">
+                                        <div>
+                                            <h4 class="fs-20 fw-600 uk-margin-small-bottom">Floor Sign
+                                            </h4>
+                                            <p class="fs-14 uk-margin-small-top">5W's tall floor sign was repurposed from providing additional information in the booth space to becoming a replacement for the backdrop for booth spaces without room for the larger backdrop.</p>
+                                            <div class="uk-flex-center uk-flex">
 
+                                                <div class="uk-display-inline-block uk-background-muted uk-border-pill uk-flex-center uk-flex-middle uk-grid-small uk-box-shadow-inset">
+                                            <ul class="uk-subnav  uk-padding-xsmall uk-subnav-pill uk-margin-remove uk-margin" uk-switcher="connect: #floor-sign">
+                                                        <li class="uk-margin-remove uk-active uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-small uk-padding-remove-vertical">New</a></li>
+                                                        <li class="uk-margin-xsmall-left uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-remove-vertical uk-padding-small">Old</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="uk-width-1-3@s uk-flex-first uk-flex-last@s uk-text-center">
+                                        <div id="floor-sign" class="uk-switcher">
+                                            <div class="">
+                                                <img src="img/5winsights/5W_FloorSign_2024.webp" class="uk-height-large uk-border-rounded" />
+
+                                            </div>
+                                            <div>
+                                                <img src="img/5winsights/5W_FloorSign_2023.webp" class="uk-height-large uk-box-shadow-small uk-border-rounded" />
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <p class="">5W's tall floor sign was repurposed from providing additional information in the booth space to becoming a replacement for the backdrop for booth spaces without room for the larger backdrop.</p>
                             </div>
                         </div>
 
                         <div class="uk-width-1-2@s uk-width-2-3@m">
-                            <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="podium">
+                            <div class="uk-background-muted borde uk-padding-small uk-border-rounded-large" id="podium">
                                 <div>
                                     <img src="img/5winsights/5W_podium_2024.webp" />
                                 </div>
+                                    <p class="fs-20 fw-600">Podium
+                                    </p>
                                 <p>The podium wrap was given a bolder presence and visual interest with a new background color and new visuals.</p>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
 
