--- a/5winsights.html
+++ b/5winsights.html
@@ -111,7 +111,7 @@
                             <h1 class="fw-600 uk-margin-left uk-margin-right">Applying new brand standards</h1>
                         </div>
                         <div>
-                            <h2 class="fs-17 fw-500 in uk-margin-left uk-margin-right">Updating designs for large-scale booth backdrops, brochures and branded swag to align with 5W's new identity</h2>
+                            <h2 class="fs-17 fw-500 in uk-margin-left uk-margin-right">Updating designs for large-scale booth backdrops, marketing collateral and branded swag to align with 5W's new identity</h2>
                         </div>
                     </div>
 
@@ -121,7 +121,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
 
 
@@ -134,23 +133,15 @@
                         <hr />
                     </div>
 
-
                     <div class="uk-background-default uk-border-rounded-large uk-padding-large uk-margin">
                         <div id="5w-insights" uk-grid>
-                            <div class="uk-width-expand uk-flex uk-flex-middle uk-flex-first@s ">
+                            <div class="uk-width-expand uk-flex uk-flex-middle uk-flex-first@s">
                                 <div>
-                                    <div>
-                                        <img src="img/5winsights/5W_logo.png" class="uk-width-small uk-width-1-2 uk-width-1-3@s uk-width-1-5@m" />
-                                    </div>
+                                    <img src="img/5winsights/5W_logo.png" class="uk-width-small uk-width-1-2 uk-width-1-3@s uk-width-1-5@m" />
 
-                                    <div class="uk-margin-top">
-                                        <p class="fs-40 fw-600">Updating 5W Insights' conference presence
-                                        </p>
-                                    </div>
+                                    <div class="uk-margin-top"><p class="fs-40 fw-600">Updating 5W Insights' conference presence</p></div>
 
-                                    <div>
-                                        <p>The 5W Insights tradeshow and marketing collateral received a visual and strategic messaging update for the 2024 Bridge Conference.</p>
-                                    </div>
+                                    <div><p>The 5W Insights tradeshow and marketing collateral received a visual and strategic messaging update for the 2024 Bridge Conference.</p></div>
 
                                 </div>
                             </div>
@@ -194,171 +185,133 @@
 
                                     </div>
                                 </div>
-
-                                <div class="uk-hidden" uk-slider="finite:true">
-                                    <div class="uk-container uk-container-large uk-position-relative" >
-                                        <div class="uk-slider-container">
-                                            <div class="uk-slider-items" uk-lightbox="animation: fade;slidenav: false; nav: dotnav">
-
-                                                <div id="backdrop-1" class="uk-width-5-6 uk-width-auto@s uk-margin-right">
-                                                    <div class="">
-                                                        <a href="img/5winsights/5W_10x10-BOOTH_2024.webp" data-caption="New">
-                                                            <img src="img/5winsights/5W_10x10-BOOTH_2024.webp" class="uk-box-shadow-small uk-height-max-large"  />
-                                                        </a>
-                                                    </div>
-                                                    <p class="fs-12 fw-500 uk-margin-remove">New</p>
-                                                </div>
-
-                                                <div id="backdrop-2" class="uk-width-5-6 uk-width-auto@s uk-margin-right">
-                                                    <div class="">
-                                                        <a href="img/5winsights/5W_10x10-BOOTH_2023.webp" data-caption="Old">
-                                                            <img src="img/5winsights/5W_10x10-BOOTH_2023.webp" class="uk-box-shadow-small uk-height-max-large"   />
-                                                        </a>
-                                                    </div>
-                                                    <p class="fs-12 fw-500 uk-margin-remove">Old</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-
-                                <!-- 
-                                    <div class="uk-card uk-background-default uk-card-body uk-card-small uk-border-rounded-large uk-hidden" id="backdrop">
-                                        <div>
-                                            <img src="img/5winsights/5W_10x10-BOOTH_outlined_20240626-1.jpg" class="uk-height-max-large" />
-                                        </div>
-                                    </div>-->
-
                             </div>
-
-
                         </div>
                     </div>
 
-                    <div class="uk-grid" uk-grid>
-                        <div class="uk-width-1-2@s uk-width-1-3@m">
-                            <div class="uk-background-muted uk-padding-small uk-border-rounded-large"  >
+                        <div class="uk-grid" uk-grid>
+                            <div class="uk-width-1-2@s uk-width-1-3@m">
+                                <div class="uk-background-muted uk-padding-small uk-border-rounded-large"  >
 
-                                <div class="uk-grid-small" uk-grid>
-                                    <div class="uk-width-expand@m uk-flex uk-flex-middle">
-                                        <div>
-                                            <h4 class="fs-20 fw-600 uk-margin-small-bottom">Floor Sign
-                                            </h4>
-                                            <p class="fs-14 uk-margin-small-top">5W's tall floor sign was repurposed from providing additional information in the booth space to becoming a replacement for the backdrop for booth spaces without room for the larger backdrop.</p>
-                                            <div class="uk-flex-center uk-flex">
+                                    <div class="uk-grid-small" uk-grid>
+                                        <div class="uk-width-expand@m uk-flex uk-flex-middle">
+                                            <div>
+                                                <h4 class="fs-20 fw-600 uk-margin-small-bottom">Floor Sign
+                                                </h4>
+                                                <p class="fs-14 uk-margin-small-top">5W's tall floor sign was repurposed from providing additional information in the booth space to becoming a replacement for the backdrop for booth spaces without room for the larger backdrop.</p>
+                                                <div class="uk-flex-center uk-flex">
 
-                                                <div class="uk-display-inline-block uk-background-muted uk-border-pill uk-flex-center uk-flex-middle uk-grid-small uk-box-shadow-inset">
-                                            <ul class="uk-subnav  uk-padding-xsmall uk-subnav-pill uk-margin-remove uk-margin" uk-switcher="connect: #floor-sign">
-                                                        <li class="uk-margin-remove uk-active uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-small uk-padding-remove-vertical">New</a></li>
-                                                        <li class="uk-margin-xsmall-left uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-remove-vertical uk-padding-small">Old</a></li>
-                                                    </ul>
+                                                    <div class="uk-display-inline-block uk-background-muted uk-border-pill uk-flex-center uk-flex-middle uk-grid-small uk-box-shadow-inset">
+                                                        <ul class="uk-subnav  uk-padding-xsmall uk-subnav-pill uk-margin-remove uk-margin" uk-switcher="connect: #floor-sign">
+                                                            <li class="uk-margin-remove uk-active uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-small uk-padding-remove-vertical">New</a></li>
+                                                            <li class="uk-margin-xsmall-left uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-remove-vertical uk-padding-small">Old</a></li>
+                                                        </ul>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
 
-                                    <div class="uk-width-1-3@s uk-flex-first uk-flex-last@s uk-text-center">
-                                        <div id="floor-sign" class="uk-switcher">
-                                            <div class="">
-                                                <img src="img/5winsights/5W_FloorSign_2024.webp" class="uk-height-large uk-border-rounded" />
+                                        <div class="uk-width-1-3@s uk-flex-first uk-flex-last@s uk-text-center">
+                                            <div id="floor-sign" class="uk-switcher">
+                                                <div class="">
+                                                    <img src="img/5winsights/5W_FloorSign_2024.webp" class="uk-height-large uk-border-rounded" />
 
-                                            </div>
-                                            <div>
-                                                <img src="img/5winsights/5W_FloorSign_2023.webp" class="uk-height-large uk-box-shadow-small uk-border-rounded" />
+                                                </div>
+                                                <div>
+                                                    <img src="img/5winsights/5W_FloorSign_2023.webp" class="uk-height-large uk-box-shadow-small uk-border-rounded" />
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="uk-width-1-2@s uk-width-2-3@m">
-                            <div class="uk-background-muted borde uk-padding-small uk-border-rounded-large" id="podium">
-                                <div>
-                                    <img src="img/5winsights/5W_podium_2024.webp" />
-                                </div>
+                            <div class="uk-width-1-2@s uk-width-2-3@m">
+                                <div class="uk-background-muted borde uk-padding-small uk-border-rounded-large" id="podium">
+                                    <div>
+                                        <img src="img/5winsights/5W_podium_2024.webp" />
+                                    </div>
                                     <p class="fs-20 fw-600">Podium
                                     </p>
-                                <p>The podium wrap was given a bolder presence and visual interest with a new background color and new visuals.</p>
+                                    <p>The podium wrap was given a bolder presence and visual interest with a new background color and new visuals.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="uk-section" uk-height-viewport="expand:true">
-                <div class="uk-container uk-container-large">     
-                    <div class="uk-text-left">
-                        <h2 class="fs-18 fw-500 uk-text-uppercase">// LinkedIn</h2>
-                        <hr />
-                    </div>
-
-                    <div class="uk-background-default uk-padding-small uk-border-rounded-large uk-margin-bottom">
-
-                        <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite:true">
-                            <div class="uk-slider-items">
-
-                                <div id="bridge-slide-1" class="uk-width-medium uk-width-1-5@l">
-                                    <div class="uk-margin-small-right">
-                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides.webp" />
-                                    </div>
-                                </div>
-
-                                <div id="bridge-slide-2" class="uk-width-medium uk-width-1-5@l">
-                                    <div class="uk-margin-small-right">
-                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides2.webp"  />
-                                    </div>
-                                </div>
-
-                                <div id="bridge-slide-3" class="uk-width-medium uk-width-1-5@l">
-                                    <div class="uk-margin-small-right">
-                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides3.webp" />
-                                    </div>
-                                </div>
-
-                                <div id="bridge-slide-4" class="uk-width-medium uk-width-1-5@l">
-                                    <div class="uk-margin-small-right">
-                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides4.webp" />
-                                    </div>
-                                </div>
-
-                                <div id="bridge-slide-5" class="uk-width-medium uk-width-1-5@l">
-                                    <div class="uk-margin-small-right">
-                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides5.webp" />
-                                    </div>
-                                </div>
-
-                            </div>
+                <div class="uk-section" uk-height-viewport="expand:true">
+                    <div class="uk-container uk-container-large">     
+                        <div class="uk-text-left">
+                            <h2 class="fs-18 fw-500 uk-text-uppercase">// LinkedIn</h2>
+                            <hr />
                         </div>
 
-                        <p class="uk-margin-remove-bottom">Slides for a LinkedIn carousel post.</p>
+                        <div class="uk-background-default uk-padding-small uk-border-rounded-large uk-margin-bottom">
 
-                    </div>
+                            <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite:true">
+                                <div class="uk-slider-items">
 
-                    <div class="uk-width-1-2@s">
-                        <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="li-post">
-                            <div>
-                                <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" />
+                                    <div id="bridge-slide-1" class="uk-width-medium uk-width-1-5@l">
+                                        <div class="uk-margin-small-right">
+                                            <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides.webp" />
+                                        </div>
+                                    </div>
+
+                                    <div id="bridge-slide-2" class="uk-width-medium uk-width-1-5@l">
+                                        <div class="uk-margin-small-right">
+                                            <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides2.webp"  />
+                                        </div>
+                                    </div>
+
+                                    <div id="bridge-slide-3" class="uk-width-medium uk-width-1-5@l">
+                                        <div class="uk-margin-small-right">
+                                            <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides3.webp" />
+                                        </div>
+                                    </div>
+
+                                    <div id="bridge-slide-4" class="uk-width-medium uk-width-1-5@l">
+                                        <div class="uk-margin-small-right">
+                                            <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides4.webp" />
+                                        </div>
+                                    </div>
+
+                                    <div id="bridge-slide-5" class="uk-width-medium uk-width-1-5@l">
+                                        <div class="uk-margin-small-right">
+                                            <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides5.webp" />
+                                        </div>
+                                    </div>
+
+                                </div>
                             </div>
-                            <p class="uk-margin-remove-bottom">Supporting graphic for a LinkedIn Post to promote 5W's CEO as a Session Speaker.</p>
+
+                            <p class="uk-margin-remove-bottom">Slides for a LinkedIn carousel post.</p>
+
+                        </div>
+
+                        <div class="uk-width-1-2@s">
+                            <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="li-post">
+                                <div>
+                                    <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" />
+                                </div>
+                                <p class="uk-margin-remove-bottom">Supporting graphic for a LinkedIn Post to promote 5W's CEO as a Session Speaker.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </main>
+                </main>
 
-        <footer class="uk-background-muted uk-section-small ">
-            <div class="uk-container uk-container-xlarge">
-                <div class="uk-grid">
-                    <div class="uk-width-expand">
-                        <p class="fs-12">&copy; Brian French 2025. All rights reserved. </p>
-                    </div>
-                    <div class="uk-width-auto">
-                        <a href="#" uk-totop uk-scroll class="fs-12"></a>
+            <footer class="uk-background-muted uk-section-small ">
+                <div class="uk-container uk-container-xlarge">
+                    <div class="uk-grid">
+                        <div class="uk-width-expand">
+                            <p class="fs-12">&copy; Brian French 2025. All rights reserved. </p>
+                        </div>
+                        <div class="uk-width-auto">
+                            <a href="#" uk-totop uk-scroll class="fs-12"></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </footer>
-    </body>
-</html>
+            </footer>
+            </body>
+        </html>
