--- a/5winsights.html
+++ b/5winsights.html
@@ -173,7 +173,7 @@
                                 </div>
                             </div>
 
-                            <div class="uk-width-expand uk-flex-first uk-flex-last@s">
+                            <div class="uk-width-expand uk-flex-first uk-flex-last@m">
                                 <div id="backdrop" class="uk-switcher uk-flex uk-flex-first uk-text-center">
 
                                     <div id="backdrop-1" class="">
@@ -189,129 +189,152 @@
                         </div>
                     </div>
 
-                        <div class="uk-grid" uk-grid>
-                            <div class="uk-width-1-2@s uk-width-1-3@m">
-                                <div class="uk-background-muted uk-padding-small uk-border-rounded-large"  >
+                    <div class="uk-grid" uk-grid uk-height-match="target: > div > .uk-background-muted">
+                        <div class="uk-width-1-3@m">
+                            <div class="uk-background-muted uk-padding uk-border-rounded-large"  >
 
-                                    <div class="uk-grid-small" uk-grid>
-                                        <div class="uk-width-expand@m uk-flex uk-flex-middle">
+                                <div class="uk-grid" uk-grid>
+                                    <div class="uk-width-expand@s uk-flex uk-flex-middle">
+                                        <div>
+                                            <h4 class="fs-20 fw-600 uk-margin-small-bottom">Floor Sign
+                                            </h4>
+                                            <p class="fs-14 uk-margin-small-top">5W's tall floor sign was repurposed from providing additional information in the booth space to becoming a replacement for the backdrop for booth spaces without room for the larger backdrop.</p>
+                                            
+                                            <div class="uk-flex-center uk-flex">
+
+                                                <div class="uk-display-inline-block uk-background-muted uk-border-pill uk-flex-center uk-flex-middle uk-grid-small uk-box-shadow-inset">
+                                                    <ul class="uk-subnav  uk-padding-xsmall uk-subnav-pill uk-margin-remove uk-margin" uk-switcher="connect: #floor-sign">
+                                                        <li class="uk-margin-remove uk-active uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-small uk-padding-remove-vertical">New</a></li>
+                                                        <li class="uk-margin-xsmall-left uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-remove-vertical uk-padding-small">Old</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="uk-width-1-3@s uk-flex-first uk-flex-last@s uk-text-center">
+                                        <div id="floor-sign" class="uk-switcher">
+                                            <div><img src="img/5winsights/5W_FloorSign_2024.webp" class="uk-height-max-large uk-border-rounded" /></div>
+                                            <div><img src="img/5winsights/5W_FloorSign_2023.webp" class="uk-height-max-large uk-box-shadow-small uk-border-rounded" /></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="uk-width-2-3@m">
+
+                            <div class="uk-background-muted uk-padding uk-border-rounded-large uk-flex uk-flex-middle"  >
+
+                                <div class="uk-grid-small" uk-grid>
+                                    <div class="uk-width-expand@m uk-flex uk-flex-middle">
+                                        <div>
+                                            <h4 class="fs-20 fw-600 uk-margin-small-bottom">Podium</h4>
+
+                                            <p class="fs-14 uk-margin-small-top">The podium wrap was given a bolder presence and visual interest with a new background color and new visuals.</p>
+                                            <div class="uk-flex-center uk-flex">
+
+                                                <div class="uk-display-inline-block uk-background-muted uk-border-pill uk-flex-center uk-flex-middle uk-grid-small uk-box-shadow-inset">
+                                                    <ul class="uk-subnav  uk-padding-xsmall uk-subnav-pill uk-margin-remove uk-margin" uk-switcher="connect: #podium">
+                                                        <li class="uk-margin-remove uk-active uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-small uk-padding-remove-vertical">New</a></li>
+                                                        <li class="uk-margin-xsmall-left uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-remove-vertical uk-padding-small">Old</a></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="uk-width-4-5@l uk-flex-first uk-flex-last@l uk-text-center">
+                                        <div id="podium" class="uk-switcher">
+                                            <div class="">
+                                                <img src="img/5winsights/5W_podium_2024.webp" class="uk-border-rounded" />
+
+                                            </div>
                                             <div>
-                                                <h4 class="fs-20 fw-600 uk-margin-small-bottom">Floor Sign
-                                                </h4>
-                                                <p class="fs-14 uk-margin-small-top">5W's tall floor sign was repurposed from providing additional information in the booth space to becoming a replacement for the backdrop for booth spaces without room for the larger backdrop.</p>
-                                                <div class="uk-flex-center uk-flex">
-
-                                                    <div class="uk-display-inline-block uk-background-muted uk-border-pill uk-flex-center uk-flex-middle uk-grid-small uk-box-shadow-inset">
-                                                        <ul class="uk-subnav  uk-padding-xsmall uk-subnav-pill uk-margin-remove uk-margin" uk-switcher="connect: #floor-sign">
-                                                            <li class="uk-margin-remove uk-active uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-small uk-padding-remove-vertical">New</a></li>
-                                                            <li class="uk-margin-xsmall-left uk-padding-remove"><a href="#" class="uk-border-pill uk-padding-remove-vertical uk-padding-small">Old</a></li>
-                                                        </ul>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="uk-width-1-3@s uk-flex-first uk-flex-last@s uk-text-center">
-                                            <div id="floor-sign" class="uk-switcher">
-                                                <div class="">
-                                                    <img src="img/5winsights/5W_FloorSign_2024.webp" class="uk-height-large uk-border-rounded" />
-
-                                                </div>
-                                                <div>
-                                                    <img src="img/5winsights/5W_FloorSign_2023.webp" class="uk-height-large uk-box-shadow-small uk-border-rounded" />
-                                                </div>
+                                                <img src="img/5winsights/5W_podium_2023.webp" class="uk-box-shadow-small uk-border-rounded" />
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
 
-                            <div class="uk-width-1-2@s uk-width-2-3@m">
-                                <div class="uk-background-muted borde uk-padding-small uk-border-rounded-large" id="podium">
-                                    <div>
-                                        <img src="img/5winsights/5W_podium_2024.webp" />
-                                    </div>
-                                    <p class="fs-20 fw-600">Podium
-                                    </p>
-                                    <p>The podium wrap was given a bolder presence and visual interest with a new background color and new visuals.</p>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="uk-section" uk-height-viewport="expand:true">
-                    <div class="uk-container uk-container-large">     
-                        <div class="uk-text-left">
-                            <h2 class="fs-18 fw-500 uk-text-uppercase">// LinkedIn</h2>
-                            <hr />
+            <div class="uk-section" uk-height-viewport="expand:true">
+                <div class="uk-container uk-container-large">     
+                    <div class="uk-text-left">
+                        <h2 class="fs-18 fw-500 uk-text-uppercase">// LinkedIn</h2>
+                        <hr />
+                    </div>
+
+                    <div class="uk-background-default uk-padding-small uk-border-rounded-large uk-margin-bottom">
+
+                        <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite:true">
+                            <div class="uk-slider-items">
+
+                                <div id="bridge-slide-1" class="uk-width-medium uk-width-1-5@l">
+                                    <div class="uk-margin-small-right">
+                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides.webp" />
+                                    </div>
+                                </div>
+
+                                <div id="bridge-slide-2" class="uk-width-medium uk-width-1-5@l">
+                                    <div class="uk-margin-small-right">
+                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides2.webp"  />
+                                    </div>
+                                </div>
+
+                                <div id="bridge-slide-3" class="uk-width-medium uk-width-1-5@l">
+                                    <div class="uk-margin-small-right">
+                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides3.webp" />
+                                    </div>
+                                </div>
+
+                                <div id="bridge-slide-4" class="uk-width-medium uk-width-1-5@l">
+                                    <div class="uk-margin-small-right">
+                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides4.webp" />
+                                    </div>
+                                </div>
+
+                                <div id="bridge-slide-5" class="uk-width-medium uk-width-1-5@l">
+                                    <div class="uk-margin-small-right">
+                                        <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides5.webp" />
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
 
-                        <div class="uk-background-default uk-padding-small uk-border-rounded-large uk-margin-bottom">
+                        <p class="uk-margin-remove-bottom">Slides for a LinkedIn carousel post.</p>
 
-                            <div class="uk-container uk-container-large uk-position-relative" uk-slider="finite:true">
-                                <div class="uk-slider-items">
+                    </div>
 
-                                    <div id="bridge-slide-1" class="uk-width-medium uk-width-1-5@l">
-                                        <div class="uk-margin-small-right">
-                                            <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides.webp" />
-                                        </div>
-                                    </div>
-
-                                    <div id="bridge-slide-2" class="uk-width-medium uk-width-1-5@l">
-                                        <div class="uk-margin-small-right">
-                                            <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides2.webp"  />
-                                        </div>
-                                    </div>
-
-                                    <div id="bridge-slide-3" class="uk-width-medium uk-width-1-5@l">
-                                        <div class="uk-margin-small-right">
-                                            <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides3.webp" />
-                                        </div>
-                                    </div>
-
-                                    <div id="bridge-slide-4" class="uk-width-medium uk-width-1-5@l">
-                                        <div class="uk-margin-small-right">
-                                            <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides4.webp" />
-                                        </div>
-                                    </div>
-
-                                    <div id="bridge-slide-5" class="uk-width-medium uk-width-1-5@l">
-                                        <div class="uk-margin-small-right">
-                                            <img src="img/5winsights/li/5W_Bridge-LI-Carousel-Slides5.webp" />
-                                        </div>
-                                    </div>
-
-                                </div>
+                    <div class="uk-width-1-2@s">
+                        <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="li-post">
+                            <div>
+                                <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" />
                             </div>
-
-                            <p class="uk-margin-remove-bottom">Slides for a LinkedIn carousel post.</p>
-
-                        </div>
-
-                        <div class="uk-width-1-2@s">
-                            <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="li-post">
-                                <div>
-                                    <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" />
-                                </div>
-                                <p class="uk-margin-remove-bottom">Supporting graphic for a LinkedIn Post to promote 5W's CEO as a Session Speaker.</p>
-                            </div>
+                            <p class="uk-margin-remove-bottom">Supporting graphic for a LinkedIn Post to promote 5W's CEO as a Session Speaker.</p>
                         </div>
                     </div>
                 </div>
-                </main>
+            </div>
+        </main>
 
-            <footer class="uk-background-muted uk-section-small ">
-                <div class="uk-container uk-container-xlarge">
-                    <div class="uk-grid">
-                        <div class="uk-width-expand">
-                            <p class="fs-12">&copy; Brian French 2025. All rights reserved. </p>
-                        </div>
-                        <div class="uk-width-auto">
-                            <a href="#" uk-totop uk-scroll class="fs-12"></a>
-                        </div>
+        <footer class="uk-background-muted uk-section-small ">
+            <div class="uk-container uk-container-xlarge">
+                <div class="uk-grid">
+                    <div class="uk-width-expand">
+                        <p class="fs-12">&copy; Brian French 2025. All rights reserved. </p>
+                    </div>
+                    <div class="uk-width-auto">
+                        <a href="#" uk-totop uk-scroll class="fs-12"></a>
                     </div>
                 </div>
-            </footer>
-            </body>
-        </html>
+            </div>
+        </footer>
+    </body>
+</html>
