--- a/5winsights.html
+++ b/5winsights.html
@@ -306,16 +306,16 @@
                             </div>
                         </div>
 
-                        <p class="uk-margin-remove-bottom">Slides for a LinkedIn carousel post.</p>
+                        <p class="uk-margin-remove-bottom">Five slides created for a LinkedIn carousel post.</p>
 
                     </div>
 
-                    <div class="uk-width-1-2@s">
+                    <div class="uk-width-2-3@s uk-width-1-2@m">
                         <div class="uk-background-default uk-padding-small uk-border-rounded-large" id="li-post">
                             <div>
                                 <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" />
                             </div>
-                            <p class="uk-margin-remove-bottom">Supporting graphic for a LinkedIn Post to promote 5W's CEO as a Session Speaker.</p>
+                            <p class="uk-margin-remove-bottom">A supporting graphic created for a LinkedIn Post to promote 5W's CEO as a Session Speaker.</p>
                         </div>
                     </div>
                 </div>
