--- a/mack.html
+++ b/mack.html
@@ -199,7 +199,7 @@
 
             <div class="uk-section uk-background-primary uk-light " uk-height-viewport="expand:true">
 
-                <div class="uk-container uk-container-xlarge" uk-scrollspy="cls: uk-animation-scale-up; repeat: true;target:img">
+                <div class="uk-container uk-container-xlarge" uk-scrollspy="cls: uk-animation-slide-bottom-small; repeat: true;target:img">
 
                     <div class="uk-grid uk-grid-large" uk-grid>
 
