--- a/mack.html
+++ b/mack.html
@@ -122,28 +122,28 @@
                             </div>
                         </div>
 
-                        <div class="uk-container uk-container-small ">
-                            <div>
-                                <ul class="uk-list uk-margin-remove" uk-accordion>
-                                    <li class="uk-open">
-                                        <a class="uk-accordion-title" href>
+            <div class="uk-container uk-container-small">
+                <div>
+                    <ul class="uk-list uk-list-large uk-list-divider" uk-accordion>
+                        <li class="uk-open ">
+                            <a class="uk-accordion-title" href>
 
-                                            <h3 class="uk-margin-remove fs-20 fw-600">Modern Redesign</h3>
-                                        </a>
-                                        <div class="uk-accordion-content">
-                                            <p>In this project I revisit the original 2015 online survey and reimagine how it could be improved using using modern user-centered design principles, UI/UX, interaction design, information architecture, contemporary visual design trends, and a stronger alignment with Mack's brand identity.</p>
+                                <h3 class="uk-margin-remove fs-20 fw-600">Modern Redesign</h3>
+                            </a>
+                            <div class="uk-accordion-content">
+                                <p>In this project I revisit the original 2015 online survey and reimagine how it could be improved using using modern user-centered design principles, UI/UX, interaction design, information architecture, contemporary visual design trends, and a stronger alignment with Mack's brand identity.</p>
 
-                                            <p>Presented below as an 'Old vs. New' comparison, this project serves as a case study demonstrating my evolution and growth as a designer and my deeper understanding of modern digital product design.</p>
+                                <p>Presented below as an 'Old vs. New' comparison, this project serves as a case study demonstrating my evolution and growth as a designer and my deeper understanding of modern digital product design.</p>
 
-                                            <p>This comparison directly illustrates how I now approach similar challenges with an expanded skillset in areas like design thinking and creating more delightful, functional design systems, my ability to apply modern design thinking to significantly improve a user experience, and my commitment to creating high-quality, user-centric digital products.</p></div>
-                                    </li>
+                                <p>This comparison directly illustrates how I now approach similar challenges with an expanded skillset in areas like design thinking and creating more delightful, functional design systems, my ability to apply modern design thinking to significantly improve a user experience, and my commitment to creating high-quality, user-centric digital products.</p></div>
+                        </li>
 
-                                    <li>
-                                        <a class="uk-accordion-title" href>
-                                            <h3 class="uk-margin-remove fs-20 fw-600">About the 2015 Original</h3>
-                                        </a>
-                                        <div class="uk-accordion-content">
-                                            <p>While the original initiative was primarily focused on marketing goals, execution of the project involved significant underlying user experience challenges, including designing an intuitive user flow for survey completion, structuring information effectively, and ensuring a seamless experience across devices via responsive design.</p>
+                        <li class="">
+                            <a class="uk-accordion-title" href>
+                                <h3 class="uk-margin-remove fs-20 fw-600">About the 2015 Original</h3>
+                            </a>
+                            <div class="uk-accordion-content">
+                                <p>While the original initiative was primarily focused on marketing goals, execution of the project involved significant underlying user experience challenges, including designing an intuitive user flow for survey completion, structuring information effectively, and ensuring a seamless experience across devices via responsive design.</p>
 
                                             <p>As the lead designer for the original survey site, I was responsible for:</p>
 
