Changes to aid dark mode implementation

--- a/5winsights.html
+++ b/5winsights.html
@@ -230,7 +230,7 @@
                                         <div>
                                             <h4 class="fs-20 fw-600 uk-margin-small-bottom">Podium</h4>
                                             <p class="fs-14 uk-margin-small-top">The podium wrap was given a bolder presence and visual interest with a new background color and new visuals.</p>
-                                            
+
                                             <div class="uk-flex-center uk-flex">
                                                 <div class="uk-display-inline-block uk-background-muted uk-border-pill uk-flex-center uk-flex-middle uk-grid-small uk-box-shadow-inset">
                                                     <ul class="uk-subnav  uk-padding-xsmall uk-subnav-pill uk-margin-remove uk-margin" uk-switcher="connect: #podium">
@@ -306,7 +306,8 @@
                             </div>
                         </div>
 
-                        <p class="uk-margin-remove-bottom">Five slides created for a LinkedIn carousel post.</p>
+                        <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">Carousel slider</h4>
+                        <p class="fs-14 uk-margin-small-top">Five slides created for a LinkedIn carousel post.</p>
 
                     </div>
 
@@ -315,7 +316,8 @@
                             <div>
                                 <img src="img/5winsights/li/5W_VFRI-speaker_LinkedIn.webp" />
                             </div>
-                            <p class="uk-margin-remove-bottom">A supporting graphic created for a LinkedIn Post to promote 5W's CEO as a Session Speaker.</p>
+                            <h4 class="fs-20 fw-600 uk-margin-small-bottom uk-margin-top">Post graphic</h4>
+                        <p class="fs-14 uk-margin-small-top">A supporting graphic created for a LinkedIn Post to promote 5W's CEO as a Session Speaker.</p>
                         </div>
                     </div>
                 </div>
